// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReferenceSettings /> should render 1`] = `
<div
  className="settings-container"
>
  <h3
    className="view-header"
  >
    <strong>
      Settings
    </strong>
  </h3>
  <Connect(SourceTypes)
    global={true}
  />
</div>
`;

exports[`<References /> should render when [loading=false] 1`] = `
<References
  loading={false}
/>
`;

exports[`<References /> should render when [loading=true] 1`] = `
<References
  loading={true}
/>
`;
